libwx-perl (1:0.9932-6) UNRELEASED; urgency=medium

  * Bump debhelper from old 10 to 12.
  * Set debhelper-compat version in Build-Depends.
  * Remove obsolete fields Contact, Name from debian/upstream/metadata
    (already present in machine-readable debian/copyright).

 -- Debian Janitor <janitor@jelmer.uk>  Mon, 03 Feb 2020 04:00:32 +0000

libwx-perl (1:0.9932-5) unstable; urgency=medium

  * Replace reproducible_output.patch with 5 patches from openSUSE.
    Thanks to Stefan Brüns for the bug report with the pointer.
    (Closes: #901544)
  * Declare compliance with Debian Policy 4.1.4.
  * Bump debhelper compatibility level to 10.
  * Remove '--parallel' from default target in debian/rules as it's the
    default now for debhelper.
  * Fix typo in description in fix-fake-pod.patch.

 -- gregor herrmann <gregoa@debian.org>  Wed, 27 Jun 2018 20:51:40 +0200

libwx-perl (1:0.9932-4) unstable; urgency=medium

  * Team upload.
  * Fix autopkgtest failures with xvfb configuration (Closes: #895189)
  * Break older (GTK2) versions of libwx-scintilla-perl and
    libwx-glcanvas-perl. (Closes: #895134)

 -- Niko Tyni <ntyni@debian.org>  Fri, 13 Apr 2018 19:46:18 +0300

libwx-perl (1:0.9932-3) unstable; urgency=medium

  [ Alex Muntada ]
  * Remove inactive pkg-perl members from Uploaders.

  [ Damyan Ivanov ]
  * declare conformance with Policy 4.1.3 (no changes needed)

  [ Salvatore Bonaccorso ]
  * Update Vcs-* headers for switch to salsa.debian.org

  [ Olly Betts ]
  * Update version on libalien-wxwidgets-perl dependency and build-dependency
    to ensure GTK3 flavour of wxWidgets is used in both cases.
  * Tell xvfb to use a 16-bit colour display for running tests - the default
    8-bit colour causes some tests to fail.

 -- Olly Betts <olly@survex.com>  Wed, 04 Apr 2018 10:41:11 +1200

libwx-perl (1:0.9932-2) unstable; urgency=medium

  * Team upload.
  * Try harder to make the package build reproducibly, by sorting EXPORT_OK
    in Wx_Exp.pm.
