@@ -4,6 +4,7 @@ libwx-perl (1:0.9932-6) UNRELEASED; urgency=medium
   * Set debhelper-compat version in Build-Depends.
   * Remove obsolete fields Contact, Name from debian/upstream/metadata
     (already present in machine-readable debian/copyright).
+  * Add missing debian/rules targets build-indep, build-arch.
 
  -- Debian Janitor <janitor@jelmer.uk>  Mon, 03 Feb 2020 04:00:32 +0000
 
